samples/_failures_safe/1761601978_6b1be8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2edfc9b0.c: In function ‘main’:
./samples/SAFE/__tmp_2edfc9b0.c:121:5: error: expected expression at end of input
  121 |     set_element(&mat3, 0,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_2edfc9b0.c:121:5: error: too few arguments to function ‘set_element’
./samples/SAFE/__tmp_2edfc9b0.c:37:5: note: declared here
   37 | int set_element(struct Matrix *mat, size_t row, size_t col, double value) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_2edfc9b0.c:121:5: error: expected declaration or statement at end of input
  121 |     set_element(&mat3, 0,
      |     ^~~~~~~~~~~
